docs/assets/styles.css
* {
  scroll-behavior: smooth;
}

body {
  font-family: 'Hind', sans-serif;
  background: #f5f5f5;
  color: #424242;
  width: 100vw;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
}

body.dark-mode {
  background: #212121;
  color: #eeeeee;
}

body.dark-mode-animate {
  transition: background .3s, color .3s;
}

.container {
  max-width: 768px;
  padding: 32px;
  margin: 0 auto;
  margin-bottom: 64px;
}

a {
  text-decoration: none !important;
  outline: none !important;
  color: #4A90E2;
  position: relative;
}

a.button {
  color: white;
  background: #4A90E2;
  padding: 4px 16px;
  border-radius: 3px;
  border: 2px solid #4A90E2;
  min-width: 96px;
  display: inline-flex; justify-content: center; align-items: center;
  transition: background .15s, color .15s;
}

a.button:hover {
  background: transparent;
  color: #4A90E2;
}

a:not(.button)::after {
  content: ' ';
  position: absolute;
  left: 0px;
  right: 0px;
  bottom: 4px;
  height: 2px;
  background: #4A90E2;
  z-index: -1;
  transform: scaleX(0);
  transition: transform .1s;
}

a:not(.button):hover::after {
  transform: scaleX(1);
}

a.no-underline::after {
  display: none;
}

.buttons {
  text-align: right;
}

pre + .buttons {
  margin-bottom: 24px;
}

.buttons a:not(.button) {
  margin: 0 32px;
}

.logo {
  max-width: 380px;
  width: 100%;
  display: block;
  margin: 0 auto;
}

.bottom-logo {
  max-width: 128px;
  width: 100%;
  display: block;
  margin: 64px auto;
  opacity: 1;
}

body.dark-mode-animate .bottom-logo {
  transition: opacity .3s;
}

body.dark-mode .bottom-logo {
  opacity: .1;
}

.animation {
  max-width: 320px;
  width: 100%;
  display: block;
  margin: 0 auto;
  opacity: 1;
}

body.dark-mode-animate .animation {
  transition: opacity .3s;
}

body.dark-mode .animation.light {
  opacity: 0;
}

.animation.dark {
  opacity: 0;
}

body.dark-mode .animation.dark {
  opacity: 1;
}

.animation-group {
  position: relative;
  max-width: 320px;
  width: 100%;
  margin: 0 auto;
}

.animation-group .animation:not(:first-child) {
  position: absolute;
  top: 0;
  left: 0;
}

h1[main] {
  font-weight: normal;
  font-size: 48px;
}

h1[id], h2[id], h3[id] {
  position: relative;
  cursor: pointer;
}

h1[id]::before, h2[id]::before, h3[id]::before {
  content: ' ';
  position: absolute;
  top: -4px;
  bottom: 0;
  left: -32px;
  width: 24px;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url('./link.svg');
  opacity: 0;
  transform: translateX(-24px);
  transition: opacity .15s, transform .15s;
}

h1[id]:hover::before, h2[id]:hover::before, h3[id]:hover::before {
  opacity: .5;
  transform: translateX(0px);
}

/*********** 404 ***********/

.not-found img {
  width: 100%;
  margin: 0 auto;
  display: block;
}

/*********** toc ***********/

#toc {
  position: fixed;
  top: 0;
  bottom: 64px;
  right: 0;
  width: calc(50% - 384px);
  display: flex;
  justify-content: flex-end;
  flex-direction: column;
  font-size: 12px;
}

#toc>div {
  padding-left: 48px;
  margin-left: 64px;
  border-left: 1px dashed #cacaca;
  transition: border-color .3s;
}

body.dark-mode #toc>div {
  border-color: #424242;
}

#toc a { color: #bdbdbd; transition: color .15s; }
body.dark-mode #toc a { color: #424242; }
#toc a.visible, body.dark-mode #toc a.visible { color: #4A90E2; }
#toc a.h2 { margin-left: 16px; }
#toc a.h3 { margin-left: 32px; }
#toc a:hover, body.dark-mode #toc a:hover { color: #4A90E2; }

@media screen and (max-width: 1200px) {
  #toc { display: none; }
}

/*********** nav ***********/

#nav {
  position: fixed;
  top: 0;
  bottom: 64px;
  left: 0;
  width: calc(50% - 384px);
  background: #f5f5f5;
  transform: translateX(-110vw);
  transition: transform .5s, background .3s;
  display: flex;
  flex-direction: column;
}

body.dark-mode #nav {
  background: #212121;
}

#nav.active {
  transform: translateX(0);
}

#nav .contents {
  margin: 32px;
  margin-bottom: 0px;
  flex-grow: 1;
  overflow-y: auto;
}

#nav .search {
  position: relative;
  margin: 32px;
  margin-bottom: 0px;
}

#nav .search input {
  display: block;
  width: calc(100% - 9px);
  font-family: 'Hind', sans-serif;
  font-size: 14px;
  padding: 4px 0;
  padding-left: 8px;
  border: 1px solid #e0e0e0;
  background: white;
  border-radius: 32px;
  outline: none;
  color: inherit;
  transition: background .3s, border-color .3s;
}

body.dark-mode #nav .search input {
  background: black;
  border-color: #424242;
}

#nav .search input::placeholder {
  color: #9e9e9e;
  font-style: italic;
  transition: color .3s;
}

body.dark-mode #nav .search input::placeholder {
  color: #616161;
}

#nav .search p {
  font-size: 10px;
  color: #9e9e9e;
  margin-left: 8px;
  transition: color .3s;
}

body.dark-mode #nav .search p {
  color: #616161;
}

#nav .search .icon {
  position: absolute;
  width: 24px;
  height: 24px;
  top: 4px;
  right: 8px;
}

#nav .search .icon.loading {
  animation-name: rotate;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  -webkit-animation-name: rotate;
  -webkit-animation-duration: 1s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
}

#nav .search .icon img {
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;
  height: 24px;
  transition: transform .15s, opacity .15s;
}

#nav .search .icon.loading img.handle {
  opacity: 0;
}

#nav .search .icon.loading img.ring {
  transform: scale(1.5) translateX(2.156px) translateY(2.156px);
}

@-webkit-keyframes rotate {
  from {transform: rotate(0deg);}
  to {transform: rotate(360deg);}
}

@keyframes rotate {
  from {transform: rotate(0deg);}
  to {transform: rotate(360deg);}
}

#nav a {
  transition: opacity .5s;
}
/* ... */

